# skymon

./: .gitignore  Cargo.toml  README.md  clippy.toml
.cargo/: config.toml
assets/: aircrafts.md
src/: aircraft.rs  config.rs  db.rs  geo.rs  lib.rs  main.rs  sbs1.rs  utils.rs
src/database/: db.rs  mod.rs  models.rs
src/feeders/: mod.rs  sbs1.rs
src/utils/: geo.rs  mod.rs
