[package]
name = "skymon"
version = "0.1.0"
edition = "2024"

[dependencies]
map_3d = "0.1.7"
thiserror = "2"
anyhow = "1.0"
crossbeam = "0.8"
time = {version = "0.3", features = ["parsing", "local-offset"] }
rusqlite = { version = "0.40", features = ["bundled", "time", "fallible_uint"] }
cli-table = {version = "0.5", features = ["derive"], default-features = false}
ctrlc="3.5"
envy = "0.4"
serde = { version = "1.0", features = ["derive"] }
flate2 = { version = "1.0", features = ["zlib-rs"], default-features = false }
sha2 = "0.11"
ureq = { version = "3.3", optional = true }

[features]
default = []
download_aircrafts_metadata = ["dep:ureq"]

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
debug = false